# go-template-for-rust

./: Cargo.toml  Readme.md
src/: error.rs  exec.rs  funcs.rs  lexer.rs  mod.rs  node.rs  parse.rs  print_verb.rs  printf.rs  template.rs
